--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,73 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: Inter, sans-serif;
+  font-family: sans-serif;
 }
 
 div {
   box-sizing: border-box;
 }
+
+.hexagon_shadow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90px;
+  width: 90px;
+}
+
+.hexagon_shadow > svg {
+  position: absolute;
+  z-index: 1111;
+}
+
+.haxagon_data {
+  position: absolute;
+  z-index: 1121;
+  height: 90px;
+  width: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+.status {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.card_wrapper {
+  height: 100%;
+  width: 100%;
+  background-color: #313464;
+  border-radius: 16px;
+  position: relative;
+  padding: 16px;
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.status-dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.nums {
+  color: #fff;
+}
+
+.ant-popover .ant-popover-arrow::after {
+  background: #F4A64B !important;
+}
+
+ 
